--- a/main.css
+++ b/main.css
@@ -5,6 +5,12 @@ table {
     font-family: Arial;
 }
 
+th {
+    padding: 5px;
+    text-align: center;
+    vertical-align: middle;
+}
+
 td {
     border: 1px solid #000;
     padding: 5px;
